change images src

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <p class="fragment">Aplicativo da WEB Progressivo???</p>
         <p class="fragment">Progressivo?????????</p>
       </section>
-      <section data-background-image="/assets/why.gif">
-      </section> 
+      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/assets/why.gif">
+      </section>
       <section data-transition="zoom">
         <p>A idéia é que sua página web se comporte como um APP nativo Progressivamente, não impedindo seu
           funcionamento como uma página web convencional</p>
@@ -114,19 +114,21 @@ if ('serviceWorker' in navigator) {
     				</code></pre>
       </section>
 
-      <section data-background-image="/assets/programando.gif">
+      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/assets/programando.gif">
         <h1>Vamos Praticar?</h1>
       </section>
 
       <section data-transition="slide">
-        <h3>Fonte de estudos e exemplos</h3> 
+        <h3>Fonte de estudos e exemplos</h3>
         <p>Google Developers - WEB Fundamentals</p>
-        <a target="_blank" href="https://developers.google.com/web/fundamentals/codelabs/your-first-pwapp?hl=pt-br">your-first-pwapp</a><br/>
-        <a target="_blank" href="https://developers.google.com/web/fundamentals/instant-and-offline/web-storage/offline-for-pwa?hl=pt-br">offline-for-pwa</a>
+        <a target="_blank"
+          href="https://developers.google.com/web/fundamentals/codelabs/your-first-pwapp?hl=pt-br">your-first-pwapp</a><br />
+        <a target="_blank"
+          href="https://developers.google.com/web/fundamentals/instant-and-offline/web-storage/offline-for-pwa?hl=pt-br">offline-for-pwa</a>
       </section>
       <section data-transition="zoom">
         <h3>Criar Estrutura</h3>
-        <p class="fragment">index.html</p >
+        <p class="fragment">index.html</p>
         <p class="fragment">styles/app.css</p>
         <p class="fragment">src/app.js</p>
         <p class="fragment">sw.js</p>
@@ -165,11 +167,11 @@ if ('serviceWorker' in navigator) {
 
       <section data-transition="slide">
         <h3>eventos do service worker</h3>
-        <p class="fragment">install</p >
-        <p class="fragment">fetch</p >
+        <p class="fragment">install</p>
+        <p class="fragment">fetch</p>
         <p class="fragment">activate</p>
         <p class="fragment">outros...</p>
-        
+
       </section>
 
       <section data-transition="concave">
@@ -259,10 +261,10 @@ if ('serviceWorker' in navigator) {
         </code></pre>
       </section>
 
-      <section data-background-image="/assets/doubt.gif">
+      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/assets/doubt.gif">
       </section>
 
-      <section data-background-image="/assets/thanks.gif">
+      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/assets/thanks.gif">
       </section>
       <section>
         <h3>Marcelo Michels</h3>
