--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="fragment">Aplicativo da WEB Progressivo???</p>
         <p class="fragment">Progressivo?????????</p>
       </section>
-      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/assets/why.gif">
+      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/why.gif">
       </section>
       <section data-transition="zoom">
         <p>A idéia é que sua página web se comporte como um APP nativo Progressivamente, não impedindo seu
@@ -114,7 +114,7 @@ if ('serviceWorker' in navigator) {
     				</code></pre>
       </section>
 
-      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/assets/programando.gif">
+      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/programando.gif">
         <h1>Vamos Praticar?</h1>
       </section>
 
@@ -261,10 +261,10 @@ if ('serviceWorker' in navigator) {
         </code></pre>
       </section>
 
-      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/assets/doubt.gif">
+      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/doubt.gif">
       </section>
 
-      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/assets/thanks.gif">
+      <section data-background-image="https://marcelo-michels.github.io/pwa/assets/thanks.gif">
       </section>
       <section>
         <h3>Marcelo Michels</h3>
