--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ if ('serviceWorker' in navigator) {
 
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js').then((reg) => {
+        navigator.serviceWorker.register('/pwa/sw.js').then((reg) => {
           console.log('SW OK', reg.scope);
           reg.onupdatefound = () => {
             const installingWorker = reg.installing;
