--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PWA V5</title>
+  <title>
+    PWA
+  </title>
   <meta name="description" content="PWA - Progressive Web App">
   <meta name="author" content="Marcelo Michels">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="/pwa/manifest.webmanifest">
+  <link rel="manifest" href="/manifest.webmanifest"> 
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/reveal.css">
@@ -299,7 +301,7 @@ if ('serviceWorker' in navigator) {
 
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/pwa/sw.js').then((reg) => {
+        navigator.serviceWorker.register('/sw.js').then((reg) => {
           console.log('SW OK', reg.scope);
           reg.onupdatefound = () => {
             const installingWorker = reg.installing;
